# Calculator-Gtkmm

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
src/: app.cpp  app.h  main.cpp  style.css  style.h  window.cpp  window.h
